# glfwdiag

./: .gitignore  CMakeLists.txt  COPYING.md  README.md
src/: CMakeLists.txt  diag.c  diag.h  main.rc  resource.h  win32.c
